k8s/component-2/component2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component2-backend
  namespace: test-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: component2-backend
  template:
    metadata:
      labels:
        app: component2-backend
    spec:
      containers:
        - name: backend
          image: component2-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          env:
            - name: PORT
              value: "4000"
            - name: SERVICE_A_WHOAMI_URL
              value: "http://service-a.test-services.svc.cluster.local:5000/whoami"
            - name: MONGODB_URI
              value: "mongodb://mongodb.test-services.svc.cluster.local:27017/ebpf-routing"
            - name: SERVICE_NAME
              value: "component2-backend"
---
apiVersion: v1
kind: Service
metadata:
  name: component2-backend
  namespace: test-services
spec:
  selector:
    app: component2-backend
  ports:
    - port: 4000
      targetPort: 4000
      name: http
